--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -325,6 +325,7 @@
     // Victory events
     {
         "address": null, "name": "Victory - Song of Five", "locked_item": "Victory - Song of Five",
+        "region": "Dark Bramble - Nomai",
         "requires": [
             { "location": "Enter the Ash Twin Project" },
             "Warp Core Installation Manual",
@@ -334,6 +335,7 @@
     },
     {
         "address": null, "name": "Victory - Song of Six", "locked_item": "Victory - Song of Six",
+        "region": "Dark Bramble - Nomai",
         "requires": [
             { "location": "QM: Explore the Sixth Location" },
             { "location": "Enter the Ash Twin Project" },
