forgot to finish location_name_groups, and noticed a duplicate location name that was meant to be a different location

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -134,7 +134,7 @@
         "region": "Giant's Deep", "requires": [ "Translator" ]
     },
     {
-        "address": 1085038275, "name": "GD: Construction Yard (Text Wall)",
+        "address": 1085038275, "name": "GD: Statue Island Workshop (Text Wheel)",
         "region": "Giant's Deep", "requires": [ "Translator" ]
     },
     {
