forgot that we need to lock Launch Codes onto Hornfels until we implement non-vanilla spawns

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -61,6 +61,7 @@
     },
     {
         "address": 1085038261, "name": "TH: Talk to Hornfels",
+        "locked_item": "Launch Codes", // until we have non-vanilla spawns
         "region": "Timber Hearth Village", "requires": []
     },
     {
