somehow missed another trailing comma

--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -42,5 +42,5 @@
     { "code": 1734473715, "name": "Tephra's Radio Signal", "type": "filler" },
 
     { "code": null, "name": "Victory - Song of Five", "type": "progression" },
-    { "code": null, "name": "Victory - Song of Six", "type": "progression" },
+    { "code": null, "name": "Victory - Song of Six", "type": "progression" }
 ]
