rename 'TH: Bramble Seed Crater' to 'TH: Talk to Tektite about Bramble Seed'

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -65,7 +65,7 @@
         "region": "Timber Hearth Village", "requires": []
     },
     {
-        "address": 1085038262, "name": "TH: Bramble Seed Crater",
+        "address": 1085038262, "name": "TH: Talk to Tektite about Bramble Seed",
         "region": "Timber Hearth", "requires": []
     },
     {
