Harmonica Signal requires Signalscope, even if you use Scout to reach the location

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -272,7 +272,8 @@
     },
     {
         "address": 1085038296, "name": "DB: Harmonica Signal",
-        "region": "Dark Bramble - Feldspar", "requires": [] // see connection logic
+        "region": "Dark Bramble - Feldspar", // see connection logic
+        "requires": [ "Signalscope" ]
     },
     {
         "address": 1085038297, "name": "TH: Museum Shard Signal",
