rename 'ET: Quantum Moon Locator (Text Scroll)' to '(2nd Scroll)' for clarity

--- a/worlds/outer_wilds/shared_static_logic/locations.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/locations.jsonc
@@ -23,7 +23,7 @@
         "region": "Hourglass Twins", "requires": [ "Translator", "Ghost Matter Wavelength" ]
     },
     {
-        "address": 1085038253, "name": "ET: Quantum Moon Locator (Text Scroll)",
+        "address": 1085038253, "name": "ET: Quantum Moon Locator (2nd Scroll)",
         "region": "Hourglass Twins", "requires": [ "Translator" ]
     },
     {
