--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -41,5 +41,11 @@
     { "code": 1734473715, "name": "Tephra's Radio Signal", "type": "filler" },
 
     { "code": null, "name": "Victory - Song of Five", "type": "progression" },
-    { "code": null, "name": "Victory - Song of Six", "type": "progression" }
+    { "code": null, "name": "Victory - Song of Six", "type": "progression" },
+
+    { "code": 1734473716, "name": "Autopilot", "type": "useful" },
+    { "code": 1734473717, "name": "Landing Camera", "type": "useful" },
+    { "code": 1734473718, "name": "Eject Button", "type": "filler" },
+    { "code": 1734473719, "name": "Velocity Matcher", "type": "useful" },
+    { "code": 1734473720, "name": "Surface Integrity Scanner", "type": "filler" }
 ]
