--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -53,5 +53,9 @@
     { "code": 1734473722, "name": "Jetpack Fuel Refill", "type": "filler" },
     { "code": 1734473723, "name": "Marshmallow", "type": "filler" },
     { "code": 1734473724, "name": "Perfect Marshmallow", "type": "filler" },
-    { "code": 1734473725, "name": "Burnt Marshmallow", "type": "filler" }
+    { "code": 1734473725, "name": "Burnt Marshmallow", "type": "filler" },
+
+    { "code": 1734473726, "name": "Ship Damage Trap", "type": "trap" },
+    { "code": 1734473727, "name": "Audio Trap", "type": "trap" },
+    { "code": 1734473728, "name": "Meditation Trap", "type": "trap" }
 ]
